# VIDEO-SPLIT

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  gitcmd  install_requirements.sh  pyproject.toml  requirements.txt
scripts/: cleanup_non_video_split.py
src/agent/: __init__.py  env.example
src/agent/core/: __init__.py  config.py
src/agent/tools/: __init__.py  llm.py  runtime_logging.py
src/agent/tools/vedio_split/: __init__.py  cli.py  cut.py  metadata_llm.py  models.py
src/agent/tools/video_split/: pipeline.py  segment_llm.py  transcribe.py
tests/: test_vedio_split_imports.py
