[project]
name = "vedio-split"
version = "0.2.0"
description = "Video transcript → LLM clip plan → ffmpeg shorts + titles (tools/vedio_split)"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic>=2.4",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "langchain>=0.2.14",
    "langchain-core>=0.2",
    "langchain-openai>=0.1.22",
    "loguru>=0.7",
    "openai>=1.0",
    "faster-whisper>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/zhenjun-avatar/VIDEO-SPLIT"
Repository = "https://github.com/zhenjun-avatar/VIDEO-SPLIT.git"

[project.optional-dependencies]
dev = ["mypy>=1.11", "ruff>=0.6", "pytest>=8.3"]

[build-system]
requires = ["setuptools>=73", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/agent"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src/agent"
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = ["src/agent"]
testpaths = ["tests"]

[tool.ruff]
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["E501"]
